# recipe-genie

./: .gitignore  README.md
.github/: copilot-instructions.md
backend/: .gitignore  README.md  pyproject.toml
backend/app/: main.py
docs/: INDEX.md  PR_DRAFT.md  software-lifecycle.md
docs/adr/: 0001-technology-stack.md
docs/api/: README.md  openapi.yaml
docs/architecture/: README.md  architecture_overview.md
docs/design/: README.md  design_system.md
docs/plans/: SOFTWARE_DEVELOPMENT_PLAN.md
docs/requirements/: PRODUCT_REQUIREMENTS.md  README.md  SOFTWARE_REQUIREMENTS_SPECIFICATION.md  SRS.md  SRS_template.md  interview_script.md  stakeholder_list.md  survey_template.md  user_research_plan.md  user_stories.md
docs/requirements/user_interviews/: 2025-12-27_anon_1.md
docs/sprints/: sprint-1-issues.md  sprint-1.md
docs/templates/: issue_template.md  sprint_task_template.md
frontend/: README.md  angular.json  package-lock.json  package.json
