[project]
name = "recipe-genie-backend"
version = "0.1.0"
description = "Backend for RecipeGenie using FastAPI and Microsoft Agent Framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlmodel>=0.0.16",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.1",
    # Microsoft Agent Framework dependencies (Preview)
    # Note: These versions are placeholders. uv will resolve the latest compatible versions.
    # You might need to run `uv add --prerelease agent-framework agent-framework-ag-ui` manually if simple install fails.
    "agent-framework", 
    "agent-framework-ag-ui"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "httpx>=0.27.0"
]
